methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:2: error: not found: type color
def hunt(c:color) {
           ^SlugSnail:20: error: not found: value c
  if (getCouleurSol == c){
                       ^